--- a/weather/index.html
+++ b/weather/index.html
@@ -11,7 +11,7 @@
     <div class="card">
         <div class="search">
             <div class="searchParent">
-                <input type="text" spellcheck="false" placeholder="Enter city name...">
+                <input class="city-input" type="text" spellcheck="false" placeholder="Enter city name...">
             </div>
 
             <div class="searchIcon">
